# agentic-research-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
specs/001-core-research-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-research-agent/checklists/: requirements.md
specs/001-core-research-agent/contracts/: api.md
src/: config.py
src/agent/: graph.py  nodes.py  router.py  state.py
src/api/: __init__.py  routes.py
src/cli/: main.py
src/models/: request.py  response.py
src/tools/: __init__.py  base.py  knowledge_base.py  synthesizer.py  web_search.py
tests/: conftest.py
tests/contract/: test_api_routes.py
tests/integration/: test_research_flow.py
tests/unit/test_agent/: test_graph.py  test_nodes.py  test_router.py
tests/unit/test_models/: test_request.py  test_response.py
tests/unit/test_tools/: test_base.py  test_knowledge_base.py  test_synthesizer.py  test_web_search.py
